update fitnes page

--- a/fitness.html
+++ b/fitness.html
@@ -23,7 +23,7 @@
   <link rel="stylesheet" href="plugins/date-picker/css/gijgo.min.css" type="text/css" />
   <!-- Vendor stylesheets  -->
   <link rel="stylesheet" href="./plugins/theme-mode-switcher/switcher-panel.css">
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="/css/main.css">
   <link rel="stylesheet" href="./css/theme-mode-custom.css">
   <script type="text/javascript">
     var Tawk_API = Tawk_API || {},
@@ -156,8 +156,8 @@
         <div class="row align-items-center">
           <div class="col-md-9 col-lg-7 col-xl-6" data-aos="fade-right" data-aos-duration="500" data-aos-once="true">
             <div class="hero-content section-title dark-mode-texts">
-              <h1 class="gr-text-2 font-weight-bold mb-8">Bringing the Digital Era to the Fitness industrys.</h1>
-              <p class="gr-text-8 pr-sm-7 pr-md-12">Helping you truly digitalize your business and allow you to focus on
+              <h1 class="gr-text-2 font-weight-bold mb-8">Bringing the Digital Era to the Fitness industries.</h1>
+              <p class="gr-text-8 pr-sm-7 pr-md-12">Helping you truly digitalise your business and allow you to focus on
                 growing your business and increasing revenue and profitability.
               </p>
               <div class="hero-btns mt-10">
